WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146522
Regression(183998): Disqus comments take a very long time to load
https://bugs.webkit.org/show_bug.cgi?id=146522
Summary
Regression(183998): Disqus comments take a very long time to load
Chris Dumez
Reported
2015-07-01 12:32:24 PDT
Disqus comments take a very long time to load after <
http://trac.webkit.org/changeset/183998
>, for e.g. at the bottom of
http://www.asymco.com/2015/06/16/what-next-for-ipad/
Attachments
Patch
(10.48 KB, patch)
2015-07-01 13:52 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-07-01 12:32:45 PDT
rdar://problem/21590601
Chris Dumez
Comment 2
2015-07-01 13:52:01 PDT
Created
attachment 255950
[details]
Patch
WebKit Commit Bot
Comment 3
2015-07-01 14:53:05 PDT
Comment on
attachment 255950
[details]
Patch Clearing flags on attachment: 255950 Committed
r186195
: <
http://trac.webkit.org/changeset/186195
>
WebKit Commit Bot
Comment 4
2015-07-01 14:53:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug